tests/grammar/datatype/units/invalid_units_fail_2/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:1:6
  |
1 | ui = 1ui
  |      ^ invalid int binary suffix
  |